[fix] try to stop scrolling horizontally when overscrolling on mobile

--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -4,5 +4,6 @@
   min-width: 100%;
   height: 100vh;
   scroll-snap-align: start;
+  scroll-snap-stop: always;
   justify-content: center;
 }
